Refactoring aos adapters